--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 
 
 <!-- snazzy 1 -->
-<button data-target="snazzy1" data-event="click" data-animation="reveal">Trigger Snazzy 1</button>
+<button data-target="snazzy1" data-event="click">Trigger Snazzy 1</button>
 
-<div id="snazzy1" class="example snazzy sidebar">
+<div id="snazzy1" class="example sidebar">
   <h1>I'm Snazzy</h1>
 </div>
 
 
 <!-- snazzy 2 -->
-<div data-target="snazzy2" data-event="mouseover" data-animation="slide">Hover over me</div>
+<div data-target="snazzy2" data-event="mouseover">Hover over me</div>
 
-<div id="snazzy2" class="example snazzy">
+<div id="snazzy2" class="example">
   <h1>I'm Snazzy too</h1>
 </div>
 
