--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- snazzy 1 -->
 <button data-target="snazzy1" data-event="click">Trigger Snazzy 1</button>
 
-<div id="snazzy1" class="example sidebar">
+<div id="snazzy1" class="example animated sidebar">
   <h1>I'm Snazzy</h1>
 </div>
 
@@ -19,7 +19,7 @@
 <!-- snazzy 2 -->
 <div data-target="snazzy2" data-event="mouseover">Hover over me</div>
 
-<div id="snazzy2" class="example">
+<div id="snazzy2" class="example animated sidebar">
   <h1>I'm Snazzy too</h1>
 </div>
 
